--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+    <title>Curriculum</title>
 </head>
 <body>
-    
-</body>
+
 </html>
+<header>
+<nav>
+<ul>
+    <li>Home</li>
+    <li>Sobre mim</li>
+    <li>Experiencia</li>
+    <li>Cursos</li>
+    <li>Contato</li> 
+</ul>
+</nav>
+</header>
+</body>
