--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 <nav>
 <ul>
-    <li><a href="index.html"Home</li></a>
+    <li><a href="index.html">Home</a></li>
     <li>Sobre mim</li>
     <li>Experiencia</li>
     <li>Cursos</li>
