--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <nav>
 <ul>
     <li><a href="index.html">Home</a></li>
-    <li>Sobre mim</li>
-    <li>Experiencia</li>
-    <li>Cursos</li>
-    <li>Contato</li> 
+    <li><a href="Quem Sou eu.html">Quem Sou Eu </a></li>
+    <li><a href="Experiência.html">Experiência</a></li>
+    <li><a href="Cursos.html">Cursos</a></li>
+    <li><a href="Conatato.html">Contato</a></li> 
 </ul>
 </nav>
 </header>
