--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 <nav>
 <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="Home.html">Home</a></li>
     <li><a href="Quem Sou eu.html">Quem Sou Eu </a></li>
     <li><a href="Experiência.html">Experiência</a></li>
     <li><a href="Cursos.html">Cursos</a></li>
