--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <header>
 <nav>
 <ul>
-    <li><a href="Home.html">Home</a></li>
-    <li><a href="Quem Sou eu.html">Quem Sou Eu </a></li>
-    <li><a href="Experiência.html">Experiência</a></li>
-    <li><a href="Cursos.html">Cursos</a></li>
-    <li><a href="Conatato.html">Contato</a></li> 
+    <li><a href="Home.html">Home</a>
+    <a href="Quem Sou eu.html">Quem Sou Eu </a>
+    <a href="Experiência.html">Experiência</a>
+    <a href="Cursos.html">Cursos</a>
+    <a href="Conatato.html">Contato</a> 
 </ul>
 </nav>
 </header>
