--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
 </html>
 <header>
 <nav>
+    <div class= "header"</div>
 <ul>
     <li><a href="Home.html">Home</a>
-
     <a href="Quem Sou eu.html">Quem Sou Eu </a>
-
     <a href="Experiência.html">Experiência</a>
-
     <a href="Cursos.html">Cursos</a>
-    
     <a href="Conatato.html">Contato</a> 
 </ul>
 </nav>
