--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Curriculum</title>
 </head>
 <body>
-
+    <header class="topo">
+        <img src="../curriculo/Imagem/7D2D6B8D-2CE7-4BA0-AA67-251AB537D5D7-transformed.png" alt="Logo" class="img" />
+        <h1 class="titulo-principal">Hostsite VH</h1>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas consequatur odit assumenda, rerum</p>
+      </header>
 </html>
 <header>
 <nav>
-    <div class= "header"</div>
 <ul>
     <li><a href="Home.html">Home</a>
     <a href="Quem Sou eu.html">Quem Sou Eu </a>
@@ -22,3 +25,4 @@
 </nav>
 </header>
 </body>
+</div>
