--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
         }
     }
 <div>
-    <Text>
+    <div class="topo">
         <h2>Quem Sou </h2>
         <p> Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo, moro com meu esposo e filho.   
             Atualmente estou mudando de ramo profissional. 
             Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de 
             Tecnólogo em Análise e Desenvolvimento de Sistema no SENAI.</p>
-                </Text>
-                </div>
+               <Image
+            </div>
 
 
 
