--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             Atualmente estou mudando de ramo profissional. 
             Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de 
             Tecnólogo em Análise e Desenvolvimento de Sistema no SENAI.</p>
-               <Image
+            <img src="Imagem "  class="img_logo_header" alt="logo GN">
+    </div>
             </div>
 
 
