--- a/index.html
+++ b/index.html
@@ -5,90 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
-    <style>
-        :root{
-            --color-white: #fff;
-            --color-dark1: #ffc0b4;
-            --color-dark2: #fda898;
-            --color-dark3: #f48d79;
-            --color-dark4: #017075;
-            --color-dark5: #015c63;
-            --color-puple: #034c52;
-        }
-        *{
-        margin: 0;
-        padding: 0;
-        }
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: var(--color-dark1);
-            color: var(--color-white)
-        }
-        .img_logo_header{
-            width: 45px;
-        }
-        .header,
-        .navigation_header{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-        .header{
-            background-color: var(--color-dark2);
-            box-shadow: 1px 1px 4px var(--color-dark4);
-            height: 56px;
-            justify-content: space-between;
-            padding: 0 10%;
-        }
-        .navigation_header{
-            gap: 3em;
-            z-index: 2;
-        }
-        .navigation_header a{
-            text-decoration: none;
-            color: var(--color-puple);
-            transition: 1s;
-            font-weight: bold;
-        }
-        .active{
-            background-color: var(--color-dark3);
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .content{
-            text-align: center;
-            padding-top: 5em;
-            height: 100vh;
-            transition: 1s;
-        }
-        .btn.icon_header{
-            background-color: transparent;
-            border: none;
-            color: var(--color-white)
-            cursor: pointer;
-            display: none;
-        }
-        @media screen and (max-width: 768px) {
-            .btn.icon_header{
-                display: block;
-            }
-            .navigation_header{
-                position: absolute;
-                flex-direction: column;
-                top: 0;
-                background-color: var(--color-dark5);
-                height: 100%;
-                width: 35vw;
-                padding: 1em;
-                animation-duration: 1s;
-                margin-left: -10vw;
-            }
-        }
-        @keyframes showSidebar{
-            from{margin-left: -100vw;}
-            top{margin-left: -10vw;}
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header" id="header">
@@ -116,52 +33,19 @@
 <div tabindex="0" onclick="closeSidebar()" class="content" id="content">
     <h1> Amábile Silva</h1>
 </div>
+<script src="./index.js"></script>
 
-<script>
-    var header = document.getElementById ('header')>
-    var navigationheader = document.getElementById('nagivation_header');
-    var content = document.getElementById('content');
-    var showSidebar = false;
-
-    function toggleSidebar()
-    {
-        showSidebar = !showSidebar;
-        if(showSidebar)
-        {
-            navigationheader.style.marginLeft = '-10vw'; 
-            navigationheader.style.animationName = 'showSidebar'; 
-            content.style.filter = 'blur (2px)'
-        }
-        else
-        {
-            navigationheader.style.marginLeft = '-100vw'; 
-            navigationheader.style.animationName = '';
-            content.style.filter = '';
-        }
-    }
-    function closeSidebar()
-    {
-        if (showSidebar)
-        {
-            ToggleSidebar();
-        }
-    }
-    window.addEventListener('resize', function (event)){
-        if (window.innerWidth > 768 && showSidebar)
-        {
-            toggleSidebar()
-        }
-    }
 <div>
     <div class="topo">
         <h2>Quem Sou </h2>
+          <img src="./Imagem/Amabileselfie.png" alt=""></img>
         <p> Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo, moro com meu esposo e filho.   
             Atualmente estou mudando de ramo profissional. 
             Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de 
             Tecnólogo em Análise e Desenvolvimento de Sistema no SENAI.</p>
-            <img src="Imagem "  class="img_logo_header" alt="logo GN">
+            
     </div>
-            </div>
+</div>
 
 
 
