--- a/index.html
+++ b/index.html
@@ -35,4 +35,11 @@
 </div>
 <script src="./index.js"></script>
 
+<div>
+    <div class="topo">
+        <h2> Quem Sou</h2>
+        <img src="./Imagem/Amabileselfie.png">
+    </div>
+</div>
+
 </html>
