--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <h1> Amábile Silva</h1>
 </div>
 <script src="./index.js"></script>
+</body>
 
+<body>
 <div>
     <div class="topo">
         <h2> Quem Sou</h2>
-        <img src="./Imagem/Amabileselfie.png">
+        <img src="./Imagem/Amabileselfie.png">;
     </div>
 </div>
-
+</body>
 </html>
