--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Curriculum</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<header>
     <div class="header" id="header">
         <button onclick= "toggleSidebar()"class="btn_icon_header">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-              </svg>
+            </svg>
         </button>
-       <div class="logo_header">
-          <img src="Imagem/WhatsApp_Image_2023-01-31_at_13.42.51-removebg-preview.png"  class="img_logo_header" alt="logo GN">
+    <div class="logo_header">
+        <img src="Imagem/WhatsApp_Image_2023-01-31_at_13.42.51-removebg-preview.png"  class="img_logo_header" alt="logo GN">
     </div>
     <div class="navigation_header">
         <button onclick="toggleSidebar()" class= "btn_icon_header">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                 <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-              </svg>
+            </svg>
         </button>
         <a href="#" class="active"> Menu </a>
         <a href="#" class="active"> Quem Sou</a>
@@ -29,19 +29,73 @@
         <a href="#" class="active">Cursos</a>
         <a href="#" class="active"> Contato</a>
     </div>
-</div>
-<div tabindex="0" onclick="closeSidebar()" class="content" id="content">
-    <h1> Amábile Silva</h1>
-</div>
-<script src="./index.js"></script>
-</body>
+</header>
 
-<body>
-<div>
-    <div class="topo">
-        <h2> Quem Sou</h2>
-        <img src="./Imagem/Amabileselfie.png">;
-    </div>
-</div>
-</body>
+    <body>
+        <div class="topo">
+            <div class="eu">
+                <h1>Quem sou</h1>
+            </div>
+            
+            <img src="./Imagem/Amabileselfie.png" alt="" class="imagem">
+            <h2>Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
+                Atualmente, vivo com com meu esposo e filho e estou mudando de ramo profissional. 
+                Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
+                A minha paixão  de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
+                com industrias e empresas buscando mais esta ferramenta para incorporar as suas necessidades do mundo globalizado em 
+                que estamos vivendo.
+                O meu sonho é ter a oportunidade de desenvolver um software que revolucione a medicina, mas se não eu não sonhar, 
+                então a minha vida não terá um objetivo. Para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
+                meu conhecimento nesta área</h2>
+        </div>
+        <div>
+            <div class="Experiência">
+                <p></p>
+                <h1>Experiência</h1>
+                    <ul>Empresa: Colégio Sorocaba
+                    Área: Auxiliar Administrativo
+                    Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
+                    </ul>
+                    <ul>Empresa: Colégio Adventista de Taboão da Serra
+                    Área: Aux. Administrativo, Monitora de aluno e auxiliar de classe.
+                    Período: 15/02/2013 a 03/02/2015 - 2 anos
+                    </ul>
+                    <ul>Empresa: Polícia Militar do Estado de São Paulo
+                    Área: Aux. Administrativo Temporário
+                    Período: 15/09/2010 a 15/09/2012 - 2 anos
+                    </ul>
+                    <ul>Empresa: Colégio Boscarioli
+                    Área: Secretária
+                    Período: 02/07/2007 a 20/11/2008 - 1 ano e 4 meses
+                    </ul>
+                    <ul>Empresa: Interfile Gestão de Arquivos e Documentos
+                    Área: Aux. Administrativo – Menor Aprendiz
+                    Período: 17/11/2005 a 20/06/2007 - 1 ano e 7 meses
+                    </ul>
+                    </h2>
+            </div>
+        </div>
+        <div>
+            <div class="Cursos">
+                <h1>Cursos</h1>
+                <ul>Cursos Complementares</ul>
+                <ul>● Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
+                <ul>● Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública – PMESP;</ul>
+                <ul>● Finanças Pessoais – SENAI;</ul>
+                <ul>● Tecnologia da Informação – SENAI;</ul>
+                <ul>● Blockchain – SENAI;</ul>
+                <ul>● Marketing Digital;</ul>
+                ● Tráfego Pago;
+                ● Criação de conteúdos para internet.
+                
+            </div>
+        </div>
+        <div>
+            <div class="skills">
+                <div class="hard_skills">
+                    <h2> Hard Skills</h2>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
