--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div>
             <div class="Experiência">
                 <p></p>
-                <h1>Experiência</h1>
+                <h3>Experiência</h3>
                     <ul>Empresa: Colégio Sorocaba
                     Área: Auxiliar Administrativo
                     Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
@@ -69,7 +69,7 @@
                     Período: 02/07/2007 a 20/11/2008 - 1 ano e 4 meses
                     </ul>
                     <ul>Empresa: Interfile Gestão de Arquivos e Documentos
-                    Área: Aux. Administrativo – Menor Aprendiz
+                    Área: Aux. Administrativo  Menor Aprendiz
                     Período: 17/11/2005 a 20/06/2007 - 1 ano e 7 meses
                     </ul>
                     </h2>
@@ -77,25 +77,24 @@
         </div>
         <div>
             <div class="Cursos">
-                <h1>Cursos</h1>
+                <h3>Cursos</h3>
                 <ul>Cursos Complementares</ul>
-                <ul>● Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
-                <ul>● Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública – PMESP;</ul>
-                <ul>● Finanças Pessoais – SENAI;</ul>
-                <ul>● Tecnologia da Informação – SENAI;</ul>
-                <ul>● Blockchain – SENAI;</ul>
-                <ul>● Marketing Digital;</ul>
-                ● Tráfego Pago;
-                ● Criação de conteúdos para internet.
+                <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
+                <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
+                <ul>Finanças Pessoais  SENAI;</ul>
+                <ul>Tecnologia da Informação SENAI;</ul>
+                <ul>Blockchain SENAI;</ul>
+                <ul>Marketing Digital;</ul>
+                <ul>Tráfego Pago;</ul>
+                <ul>Criação de conteúdos para internet.</ul>
                 
             </div>
         </div>
         <div>
-            <div class="skills">
-                <div class="hard_skills">
-                    <h2> Hard Skills</h2>
-                </div>
-            </div>
-        </div>
+            <div class="Contato">
+                <h3>Contato</h3>
+
+        </div>  
+        </div>      
     </body>
 </html>
