--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div>
             <div class="Experiência">
                 <h3>Experiência</h3>
-                    <ul>Empresa: Colégio Sorocaba
+                    <ul><p>Colégio Sorocaba
                     Área: Auxiliar Administrativo
                     Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
-                    </ul>
+                    </ul></p>
                     <ul>Empresa: Colégio Adventista de Taboão da Serra
                     Área: Aux. Administrativo, Monitora de aluno e auxiliar de classe.
                     Período: 15/02/2013 a 03/02/2015 - 2 anos
@@ -81,7 +81,7 @@
         </div>
         <div>
             <div class="Cursos">
-                <h3>Cursos</h3>
+                <h1>Cursos</h1>
                 <ul>Cursos Complementares</ul>
                 <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
                 <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
