--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
         </div>
         <div>
             <div class="Experiência">
-                <h3>Experiência</h3>
-                    <ul><p>Colégio Sorocaba
+                <h1>Experiência</h1>
+                <div>
+                    <div class="textoexperiencia">
+                    </div>  
+                </div>
+                    <ul><p>Empresa: Colégio Sorocaba
                     Área: Auxiliar Administrativo
                     Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
                     </ul></p>
@@ -82,6 +86,11 @@
         <div>
             <div class="Cursos">
                 <h1>Cursos</h1>
+                <div>
+                    <div class="textocurso">
+                    </div>
+
+                </div>
                 <ul>Cursos Complementares</ul>
                 <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
                 <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
