--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         <div class="topo">
             <div class="escrita">
                 <div class="eu">
-                    <h1>Quem sou</h1>
+                    <h1><b>Quem sou</b></h1>
                 </div>
-                
                 <h2 class="textoeu">Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
                     Atualmente, vivo com com meu esposo e filho e estou mudando de ramo profissional. 
                     Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
@@ -55,30 +54,30 @@
         </div>
         <div>
             <div class="Experiência">
-                <h1>Experiência</h1>
+                <h1><b>Experiência</b></h1>
                 <div>
                     <div class="textoexperiencia">
                     </div>  
-                </div>
-                    <ul><p>Empresa: Colégio Sorocaba
-                    Área: Auxiliar Administrativo
-                    Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
+                </div><h2>
+                    <ul><p><b>Empresa:</b> Colégio Sorocaba
+                    <b>Área:</b> Auxiliar Administrativo
+                    <b>Período:</b> 4 anos e 9 meses
                     </ul></p>
-                    <ul>Empresa: Colégio Adventista de Taboão da Serra
-                    Área: Aux. Administrativo, Monitora de aluno e auxiliar de classe.
-                    Período: 15/02/2013 a 03/02/2015 - 2 anos
+                    <ul><b>Empresa:</b> Colégio Adventista de Taboão da Serra
+                    <b>Área:</b> Aux. Administrativo, Monitora de aluno e auxiliar de classe.
+                    <b>Período:</b> 2 anos
                     </ul>
-                    <ul>Empresa: Polícia Militar do Estado de São Paulo
-                    Área: Aux. Administrativo Temporário
-                    Período: 15/09/2010 a 15/09/2012 - 2 anos
+                    <ul><b>Empresa:</b> Polícia Militar do Estado de São Paulo
+                    <b>Área:</b> Aux. Administrativo Temporário
+                    <b>Período:</b> 2 anos
                     </ul>
-                    <ul>Empresa: Colégio Boscarioli
-                    Área: Secretária
-                    Período: 02/07/2007 a 20/11/2008 - 1 ano e 4 meses
+                    <ul><b>Empresa:V</b>Colégio Boscarioli
+                    <b>Área:</b> Secretária
+                    <b>Período:</b>1 ano e 4 meses
                     </ul>
-                    <ul>Empresa: Interfile Gestão de Arquivos e Documentos
-                    Área: Aux. Administrativo  Menor Aprendiz
-                    Período: 17/11/2005 a 20/06/2007 - 1 ano e 7 meses
+                    <ul><b>Empresa:</b> Interfile Gestão de Arquivos e Documentos
+                    <b>Área:</b> Aux. Administrativo  Menor Aprendiz
+                    <b>Período:</b>1 ano e 7 meses
                     </ul>
                     </h2>
             </div>
@@ -90,8 +89,8 @@
                     <div class="textocurso">
                     </div>
 
-                </div>
-                <ul>Cursos Complementares</ul>
+                </div><h2>
+                <ul><b>Cursos Complementares</b></ul>
                 <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
                 <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
                 <ul>Finanças Pessoais  SENAI;</ul>
@@ -99,7 +98,7 @@
                 <ul>Blockchain SENAI;</ul>
                 <ul>Marketing Digital;</ul>
                 <ul>Tráfego Pago;</ul>
-                <ul>Criação de conteúdos para internet.</ul>
+                <ul>Criação de conteúdos para internet.</ul></h2>
                 
             </div>
         </div>    
