--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     que estamos vivendo.
                     O meu sonho é ter a oportunidade de desenvolver um software que revolucione a medicina, mas se não eu não sonhar, 
                     então a minha vida não terá um objetivo. Para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
-                    meu conhecimento nesta área
+                    meu conhecimento nesta área.
                 </h2>
              </div>
 
