--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        p{
+            text-align: justify;
+            text-indent: 50px;
+        }
+    </style>
 </head>
 <header>
     <div class="header" id="header">
@@ -33,6 +39,7 @@
 
     <body>
         <div class="topo">
+        </div>
             <div class="escrita">
                 <div class="eu">
                     <h1><b>Quem sou</b></h1>
@@ -54,32 +61,29 @@
         </div>
         <div>
             <div class="Experiência">
-                <h1><b>Experiência</b></h1>
+                <h1>Experiência</h1>
                 <div>
                     <div class="textoexperiencia">
                     </div>  
-                </div><h2>
-                    <ul><p><b>Empresa:</b> Colégio Sorocaba
-                    <b>Área:</b> Auxiliar Administrativo
-                    <b>Período:</b> 4 anos e 9 meses
-                    </ul></p>
-                    <ul><b>Empresa:</b> Colégio Adventista de Taboão da Serra
-                    <b>Área:</b> Aux. Administrativo, Monitora de aluno e auxiliar de classe.
-                    <b>Período:</b> 2 anos
+                </div><h3>
+                    <ul>Empresa: Colégio Sorocaba</ul>
+                    <ul>Área:Auxiliar Administrativo</ul>
+                    <ul>Período: 4 anos e 9 meses
                     </ul>
-                    <ul><b>Empresa:</b> Polícia Militar do Estado de São Paulo
-                    <b>Área:</b> Aux. Administrativo Temporário
-                    <b>Período:</b> 2 anos
+                    <ul>Empresa:Colégio Adventista de Taboão da Serra</ul>
+                    <ul>Área:Aux. Administrativo, Monitora de aluno e auxiliar de classe</ul>
+                    <ul>Período:2 anos</ul>
                     </ul>
-                    <ul><b>Empresa:V</b>Colégio Boscarioli
-                    <b>Área:</b> Secretária
-                    <b>Período:</b>1 ano e 4 meses
-                    </ul>
-                    <ul><b>Empresa:</b> Interfile Gestão de Arquivos e Documentos
-                    <b>Área:</b> Aux. Administrativo  Menor Aprendiz
-                    <b>Período:</b>1 ano e 7 meses
-                    </ul>
-                    </h2>
+                    <ul>Empresa:Polícia Militar do Estado de São Paulo</ul>
+                    <ul>Área:Aux. Administrativo Temporário</ul>
+                    <ul>Período:2 anos</ul>
+                    <ul>Empresa:Colégio Boscarioli</ul>
+                    <ul>Área:Secretária</ul>
+                    <ul>Período:1 ano e 4 meses</ul>
+                    <ul>Empresa:Interfile Gestão de Arquivos e Documentos</ul>
+                    <ul>Área:Aux. Administrativo  Menor Aprendiz</ul>
+                    <ul>Período:1 ano e 7 meses</ul>
+                    </h3>
             </div>
         </div>
         <div>
