--- a/index.html
+++ b/index.html
@@ -66,27 +66,23 @@
                     <div class="textoexperiencia">
                     </div>  
                 </div>
-                    <ul><p>Empresa: Colégio Sorocaba
-                    Área: Auxiliar Administrativo
-                    Período: 02/08/2016 a 06/04/2021 - 4 anos e 9 meses
-                    </ul></p>
-                    <ul>Empresa: Colégio Adventista de Taboão da Serra
-                    Área: Aux. Administrativo, Monitora de aluno e auxiliar de classe.
-                    Período: 15/02/2013 a 03/02/2015 - 2 anos
-                    </ul>
-                    <ul>Empresa: Polícia Militar do Estado de São Paulo
-                    Área: Aux. Administrativo Temporário
-                    Período: 15/09/2010 a 15/09/2012 - 2 anos
-                    </ul>
-                    <ul>Empresa: Colégio Boscarioli
-                    Área: Secretária
-                    Período: 02/07/2007 a 20/11/2008 - 1 ano e 4 meses
-                    </ul>
-                    <ul>Empresa: Interfile Gestão de Arquivos e Documentos
-                    Área: Aux. Administrativo  Menor Aprendiz
-                    Período: 17/11/2005 a 20/06/2007 - 1 ano e 7 meses
-                    </ul>
-                    </h2>
+                <h2>
+                    <ul>Empresa: Colégio Sorocaba</ul>
+                    <ul>Área: Auxiliar Administrativo</ul>
+                    <ul>Período: 4 anos e 9 meses</ul>
+                    <ul>Empresa: Colégio Adventista de Taboão da Serra</ul>
+                    <ul>Área: Aux. Administrativo, Monitora de aluno e auxiliar de classe.</ul>
+                    <ul>Período: 2 anos</ul>
+                    <ul>Empresa: Polícia Militar do Estado de São Paulo</ul>
+                    <ul>Área: Aux. Administrativo Temporário</ul>
+                    <ul>Período: 2 anos</ul>
+                    <ul>Empresa: Colégio Boscarioli</ul>
+                    <ul>Área: Secretária</ul>
+                    <ul>Período: 1 ano e 4 meses</ul>
+                    <ul>Empresa: Interfile Gestão de Arquivos e Documentos</ul>
+                    <ul>Área: Aux. Administrativo  Menor Aprendiz</ul>
+                    <ul>Período: 1 ano e 7 meses</ul>
+                </h2>
             </div>
         </div>
         <div>
@@ -97,17 +93,39 @@
                     </div>
 
                 </div>
+            <h2>
                 <ul>Cursos Complementares</ul>
-                <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
-                <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
-                <ul>Finanças Pessoais  SENAI;</ul>
-                <ul>Tecnologia da Informação SENAI;</ul>
-                <ul>Blockchain SENAI;</ul>
-                <ul>Marketing Digital;</ul>
-                <ul>Tráfego Pago;</ul>
-                <ul>Criação de conteúdos para internet.</ul>
-                
+                <ul> - Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
+                <ul> - Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
+                <ul> - Finanças Pessoais  SENAI;</ul>
+                <ul> - Tecnologia da Informação SENAI;</ul>
+                <ul> - Blockchain SENAI;</ul>
+                <ul> - Marketing Digital;</ul>
+                <ul> - Tráfego Pago;</ul>
+                <ul> - Criação de conteúdos para internet.</ul>
+            </h2>
+                </div>
+        </div> 
+        <div>
+            <div class="contato">
+                <h1> Contato</h1>
+                <div class="icones">
+                    <p><a href="mailto:amabiledaiannecontato@gmail.com">
+                        <img src="./Imagem/email_PNG15.png" class="emailicone">
+                    </a></p>
+                    <p><a href="tel:5511953185425"></a>
+                        <img src="./Imagem/C552489.png" class="telefoneicone">
+                    </a></p>
+                    <p><a href="https://instagram.com/amabiledaianne?igshid=MWI4MTIyMDE=" target="_blank">
+                        <img src="./Imagem/I1409946.png" class="instaicone">
+                    </a></p>
+                    <p><a href="https://www.linkedin.com/in/am%C3%A1bile-silva-413597170" target="_blank">
+                        <img src="./Imagem/Linkedin.png" class="inicone">
+                    </a></p>
+                </div>   
+
             </div>
-        </div>    
+        </div>
+        </div>   
     </body>
 </html>
