--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
         </div>
         <div>
             <div class="Experiência">
-                <h1>Experiência</h1>
-                <div>
-                    <div class="textoexperiencia">
-                    </div>  
-                </div>
-                <h2>
+                <h1>Experiência</h1
+                    class="tituloexperiencia">
+                
+            <div class="textoexperiencia">  
+                <p>
                     <ul>Empresa: Colégio Sorocaba</ul>
                     <ul>Área: Auxiliar Administrativo</ul>
                     <ul>Período: 4 anos e 9 meses</ul>
@@ -82,10 +81,10 @@
                     <ul>Empresa: Interfile Gestão de Arquivos e Documentos</ul>
                     <ul>Área: Aux. Administrativo  Menor Aprendiz</ul>
                     <ul>Período: 1 ano e 7 meses</ul>
-                </h2>
+                </p>
             </div>
         </div>
-        <div>
+
             <div class="Cursos">
                 <h1>Cursos</h1>
                 <div>
@@ -104,9 +103,8 @@
                 <ul> - Tráfego Pago;</ul>
                 <ul> - Criação de conteúdos para internet.</ul>
             </h2>
-                </div>
-        </div> 
-        <div>
+            </div>
+
             <div class="contato">
                 <h1> Contato</h1>
                 <div class="icones">
@@ -124,8 +122,6 @@
                     </a></p>
                 </div>   
 
-            </div>
-        </div>
-        </div>   
+            </div> 
     </body>
 </html>
