--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
                     <h1><b>Quem sou</b></h1>
                 </div>
                 <h2 class="textoeu">Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
-                    Atualmente, vivo com com meu esposo e filho e estou mudando de ramo profissional. 
+                    Atualmente, vivo com com meu esposo e meu filho, estou mudando de ramo profissional. 
                     Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
-                    A minha paixão  de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
-                    com industrias e empresas buscando mais esta ferramenta para incorporar as suas necessidades do mundo globalizado em 
+                    A minha paixão de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
+                    como industrias e empresas que buscam hoje mais e mais esta ferramenta para incorporar as suas necessidades do mundo globalizado em 
                     que estamos vivendo.
-                    O meu sonho é ter a oportunidade de desenvolver um software que revolucione a medicina, mas se não eu não sonhar, 
-                    então a minha vida não terá um objetivo. Para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
-                    meu conhecimento nesta área.
+                    O meu sonho é ter a oportunidade de desenvolver um software para celular que ajude a encontrar crianças perdidas, atraves de foto e reconhecimento facial. Seria uma base de cadastro,
+                    onde todo pai e mãe colocaria seus dados, fotos e primcipalmente um reconhecimento facial. Caso essa criança se perca na praia por exemplo, basta um adulto abrir o app, terá um ícone "criança localizada"
+                    e fazer o reconhecimento facial, app ja aciona o contato e localização dos pais e os pais recebem uma nottificação ou ligação que a criança foi localizade e a sua localização. Hoje até existem sites com funções parecidas
+                    mas não com toda funcionalidade e facilidade que estou descrevendo meu futuro projeto. Como eu disse é um sonho, um objetivo que eu tenho para contribuir com a sociedade. E para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
+                    meu conhecimento nesta área, junto com o SENAI e a 2RPNet.
                 </h2>
              </div>
 
@@ -95,6 +97,7 @@
 
                 </div><h2>
                 <ul><b>Cursos Complementares</b></ul>
+                <ul>Tecnico Administrativo - Instituto Federal-IFSP</ul>
                 <ul>Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
                 <ul>Cursos de Formação Administrativo do Serviço Auxiliar Voluntário da Segurança Pública  PMESP;</ul>
                 <ul>Finanças Pessoais  SENAI;</ul>
