--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="#tela2" class="active">Experiências</a>
         <a href="#tela3" class="active">Cursos</a>
         <a href="#tela4" class="active">Contato</a>
+        <a href="home" img src="./Imagem/logopretoWhatsApp_Image_2023-01-31_at_13.42.51-removebg-preview.png">
     </div>
 </header>
 
