--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <a href="#tela2" class="active">Experiências</a>
         <a href="#tela3" class="active">Cursos</a>
         <a href="#tela4" class="active">Contato</a>
-        <a href="home" img src="./Imagem/logopretoWhatsApp_Image_2023-01-31_at_13.42.51-removebg-preview.png">
     </div>
 </header>
 
@@ -110,6 +109,7 @@
 
         <div class="tela4" id="tela4">
             <p class="titulocontato">Contato</p>
+            <img src="./Imagem/Hong_Kong_Business_Company_Industry_City_PNG_-_Free_Download-removebg-preview.png" alt="" class="imagem2">
 
             <div class="icones">
                 <p><a href="mailto:amabiledaiannecontato@gmail.com">
@@ -125,6 +125,7 @@
                     <img src="./Imagem/Linkedin.png" class="inicone">
                 </a></p>  
             </div>
+
         </div> 
 
 
