--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         <div class="tela3" id="tela3">
             <text class="titulocurso">Cursos</text>
             
+            <img src="./Imagem/Conhecimento-Amplo-removebg-preview(1).png" alt="" class="imagem3">
+            
             <text class="textocurso">
                 <ul> - Técnico Administrativo - Instituto Federal - IFSP</ul>
                 <ul> - Administração; Contabilidade; Marketing; Marketing Pessoal; Informática; Comunicação e Expressão; Primeiros Socorros – CIEE;</ul>
@@ -109,7 +111,6 @@
 
         <div class="tela4" id="tela4">
             <p class="titulocontato">Contato</p>
-            <img src="./Imagem/Hong_Kong_Business_Company_Industry_City_PNG_-_Free_Download-removebg-preview.png" alt="" class="imagem2">
 
             <div class="icones">
                 <p><a href="mailto:amabiledaiannecontato@gmail.com">
