--- a/index.html
+++ b/index.html
@@ -13,26 +13,17 @@
         }
     </style>
 </head>
+
 <header>
     <div class="header" id="header">
-        <button onclick= "toggleSidebar()"class="btn_icon_header">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
-            </svg>
-        </button>
-    <div class="logo_header">
-        <img src="Imagem/WhatsApp_Image_2023-01-31_at_13.42.51-removebg-preview.png"  class="img_logo_header" alt="logo GN">
-    </div>
-    <div class="navigation_header">
-        <button onclick="toggleSidebar()" class= "btn_icon_header">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
-                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-            </svg>
-        </button>
-        <a href="#tela1" class="active">Quem Sou</a>
-        <a href="#tela2" class="active">Experiências</a>
-        <a href="#tela3" class="active">Cursos</a>
-        <a href="#tela4" class="active">Contato</a>
+
+        <div class="navigation_header">
+            </button>
+            <a href="#tela1" class="active">Quem Sou</a>
+            <a href="#tela2" class="active">Experiências</a>
+            <a href="#tela3" class="active">Cursos</a>
+            <a href="#tela4" class="active">Contato</a>
+        </div>
     </div>
 </header>
 
@@ -45,16 +36,15 @@
             
                 <text class="textoeu">
                     Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
-                    Atualmente, vivo com com meu esposo e meu filho, estou mudando de ramo profissional. 
-                    Para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
-                    A minha paixão de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
+                    Atualmente, vivo com com meu esposo e meu filho, estou mudando de ramo profissional, para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
+                    <p>A minha paixão de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
                     como industrias e empresas que buscam hoje mais e mais esta ferramenta para incorporar as suas necessidades do mundo globalizado em 
-                    que estamos vivendo.
-                    O meu sonho é ter a oportunidade de desenvolver um software para celular que ajude a encontrar crianças perdidas, atraves de foto e reconhecimento facial. Seria uma base de cadastro,
+                    que estamos vivendo.</p>
+                    <p>Tenho um projeto que quero desenvolver, que é um software para celular que ajude a encontrar crianças perdidas, atraves de foto e reconhecimento facial. Seria uma base de cadastro,
                     onde todo pai e mãe colocaria seus dados, fotos e primcipalmente um reconhecimento facial. Caso essa criança se perca na praia por exemplo, basta um adulto abrir o app, terá um ícone "criança localizada"
-                    e fazer o reconhecimento facial, app ja aciona o contato e localização dos pais e os pais recebem uma nottificação ou ligação que a criança foi localizade e a sua localização. Hoje até existem sites com funções parecidas
-                    mas não com toda funcionalidade e facilidade que estou descrevendo meu futuro projeto. Como eu disse é um sonho, um objetivo que eu tenho para contribuir com a sociedade. E para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
-                    meu conhecimento nesta área, junto com o SENAI e a 2RPNet.
+                    e fazer o reconhecimento facial, app ja aciona o contato e localização dos pais e os pais recebem uma nottificação ou ligação que a criança foi localizade e a sua localização.</p> Hoje até existem sites com funções parecidas
+                    mas não com toda funcionalidade e facilidade. <p>Este é um objetivo que eu tenho para contribuir com a sociedade. E para conseguir o meu objetivo, pretendo continuar estudando e aprimorando 
+                    meu conhecimento nesta área, junto com o SENAI e a 2RPNet.</p>
                 </text>
             </div>
 
