--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <text class="tituloeu"><b>Quem sou</b></text>
             
                 <text class="textoeu">
-                    Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
-                    Atualmente, vivo com com meu esposo e meu filho, estou mudando de ramo profissional, para conseguir isso, iniciei neste ano de 2023 o curso no Senai de Tecnólogo em Análise e Desenvolvimento de Sistema.
+                    <p>Meu nome é Amábile Silva, tenho 32 anos e nasci em São Paulo. 
+                    Atualmente, vivo com com meu esposo e meu filho, estou mudando de ramo profissional, para isso iniciei neste ano de 2023 o curso de Tecnólogo em Análise e Desenvolvimento de Sistema - SENAI.</p>
                     <p>A minha paixão de infância me levou a agora as 32 anos iniciar neste ramo da tecnologia, visando claro o mundo atual, 
                     como industrias e empresas que buscam hoje mais e mais esta ferramenta para incorporar as suas necessidades do mundo globalizado em 
                     que estamos vivendo.</p>
@@ -118,8 +118,6 @@
             </div>
 
         </div> 
-
-
             
     </body>
 </html>
